// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDebugFiles renders 1`] = `
<ProjectDebugSymbols
  location={
    Object {
      "query": Object {},
    }
  }
  params={
    Object {
      "orgId": "org",
      "projectId": "project",
    }
  }
>
  <SentryDocumentTitle
    objSlug="project"
    title="Debug Files"
  >
    <SideEffect(DocumentTitle)
      title="Debug Files - project - Sentry"
    >
      <DocumentTitle
        title="Debug Files - project - Sentry"
      />
    </SideEffect(DocumentTitle)>
  </SentryDocumentTitle>
  <StyledSettingsPageHeading
    noTitleStyles={false}
    title="Debug Information Files"
  >
    <SettingsPageHeading
      className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
      noTitleStyles={false}
      title="Debug Information Files"
    >
      <div
        className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
      >
        <TitleAndActions>
          <div
            className="css-ifzfc5-TitleAndActions e1uay4fd0"
          >
            <Title
              styled={false}
            >
              <div
                className="css-120v9s3-Title e1uay4fd1"
              >
                <HeaderTitle>
                  <h4
                    className="css-186zxqn-HeaderTitle eqkydle2"
                  >
                    Debug Information Files
                  </h4>
                </HeaderTitle>
              </div>
            </Title>
          </div>
        </TitleAndActions>
      </div>
    </SettingsPageHeading>
  </StyledSettingsPageHeading>
  <TextBlock>
    <div
      className="css-1j3tvli-TextBlock e1x1lar10"
    >
      
            Debug information files are used to convert addresses and minified
            function names from native crash reports into function names and
            locations.
          
    </div>
  </TextBlock>
  <TextBlock>
    <div
      className="css-1j3tvli-TextBlock e1x1lar10"
    >
      This list contains all uploaded debug information files:
    </div>
  </TextBlock>
  <Panel>
    <Component
      className="css-1xbmlp0-Panel e119nu470"
    >
      <div
        className="css-1xbmlp0-Panel e119nu470"
      >
        <PanelHeader
          hasButtons={true}
        >
          <div
            className="css-8yda21-PanelHeader en8g1d30"
          >
            <Styled(div)
              width={0.375}
            >
              <div
                className="css-1xtl59v"
              >
                Debug ID
              </div>
            </Styled(div)>
            <Styled(div)
              flex="1"
              minWidth="auto"
            >
              <div
                className="css-gzhknm"
              >
                Name
              </div>
            </Styled(div)>
            <Styled(div)>
              <div
                className="css-vurnku"
              >
                <withRouter(AsyncComponentSearchInput)
                  api={
                    Client {
                      "_chain": [Function],
                      "_wrapRequest": [Function],
                      "bulkUpdate": [Function],
                      "handleRequestError": [Function],
                      "hasProjectBeenRenamed": [Function],
                    }
                  }
                  className="search"
                  onError={[Function]}
                  onSuccess={[Function]}
                  placeholder="Search DIFs"
                  updateRoute={true}
                  url="/projects/org/project/"
                >
                  <AsyncComponentSearchInput
                    api={
                      Client {
                        "_chain": [Function],
                        "_wrapRequest": [Function],
                        "bulkUpdate": [Function],
                        "handleRequestError": [Function],
                        "hasProjectBeenRenamed": [Function],
                      }
                    }
                    className="search"
                    debounceWait={200}
                    location={
                      Object {
                        "query": Object {},
                      }
                    }
                    onError={[Function]}
                    onSuccess={[Function]}
                    placeholder="Search DIFs"
                    router={
                      Object {
                        "createHref": [MockFunction],
                        "go": [MockFunction],
                        "goBack": [MockFunction],
                        "goForward": [MockFunction],
                        "isActive": [MockFunction],
                        "listen": [MockFunction],
                        "location": Object {
                          "query": Object {},
                        },
                        "push": [MockFunction],
                        "replace": [MockFunction],
                        "setRouteLeaveHook": [MockFunction],
                      }
                    }
                    updateRoute={true}
                    url="/projects/org/project/"
                  >
                    <Form
                      onSubmit={[Function]}
                    >
                      <form
                        className="css-1i180od-Form e6xwo1"
                        onSubmit={[Function]}
                      >
                        <Input
                          className="search"
                          onChange={[Function]}
                          placeholder="Search DIFs"
                          value=""
                        >
                          <input
                            className="search css-17dbz9s-Input e1xej46s0"
                            onChange={[Function]}
                            placeholder="Search DIFs"
                            value=""
                          />
                        </Input>
                      </form>
                    </Form>
                  </AsyncComponentSearchInput>
                </withRouter(AsyncComponentSearchInput)>
              </div>
            </Styled(div)>
          </div>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <EmotionCssPropInternal
            __EMOTION_LABEL_PLEASE_DO_NOT_USE__="PanelBody"
            __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
            css={
              Object {
                "map": undefined,
                "name": "b1rh9y-PanelBody",
                "next": undefined,
                "styles": "h1,h2,h3,h4,h5,h6,p,ul,ol,table,dl,blockquote,form,pre,.auto-select-text,.section,[class^='highlight-']{margin-bottom:20px;&:last-child{margin-bottom:0;}}h1,h2,h3,h4,h5,h6{line-height:1.2;}p,ul,ol,blockquote{line-height:1.5;}h1{font-size:2em;}h2{font-size:1.75em;}h3{font-size:1.5em;}h4{font-size:1.25em;}h5{font-size:1em;}pre{word-break:break-all;white-space:pre-wrap;};;label:PanelBody;",
                "toString": [Function],
              }
            }
          >
            <div
              className="css-b1rh9y-PanelBody"
            >
              <EmptyStateWarning
                small={false}
              >
                <EmptyStreamWrapper
                  data-test-id="empty-state"
                >
                  <div
                    className="css-15oag6i-EmptyStreamWrapper e1107k000"
                    data-test-id="empty-state"
                  >
                    <HeroIcon
                      size="54"
                      src="icon-circle-exclamation"
                    >
                      <ForwardRef
                        className="css-5ipi7e-InlineSvg-HeroIcon e1csd7tf0"
                        size="54"
                        src="icon-circle-exclamation"
                      >
                        <svg
                          className="css-5ipi7e-InlineSvg-HeroIcon e1csd7tf0"
                          height="54"
                          viewBox={Object {}}
                          width="54"
                        >
                          <use
                            href="#test"
                            xlinkHref="#test"
                          />
                        </svg>
                      </ForwardRef>
                    </HeroIcon>
                    <p>
                      There are no debug symbols for this project.
                    </p>
                  </div>
                </EmptyStreamWrapper>
              </EmptyStateWarning>
            </div>
          </EmotionCssPropInternal>
        </PanelBody>
      </div>
    </Component>
  </Panel>
  <Styled(Pagination)
    onCursor={[Function]}
  >
    <Pagination
      className="css-yneqnx e1vkspke0"
      onCursor={[Function]}
    />
  </Styled(Pagination)>
</ProjectDebugSymbols>
`;

exports[`ProjectDebugFiles renders empty 1`] = `
<Fragment>
  <SentryDocumentTitle
    objSlug="project"
    title="Debug Files"
  />
  <StyledSettingsPageHeading
    noTitleStyles={false}
    title="Debug Information Files"
  />
  <TextBlock>
    
            Debug information files are used to convert addresses and minified
            function names from native crash reports into function names and
            locations.
          
  </TextBlock>
  <TextBlock>
    This list contains all uploaded debug information files:
  </TextBlock>
  <Panel>
    <PanelHeader
      hasButtons={true}
    >
      <Styled(div)
        width={0.375}
      >
        Debug ID
      </Styled(div)>
      <Styled(div)
        flex="1"
        minWidth="auto"
      >
        Name
      </Styled(div)>
      <Styled(div)>
        <withRouter(AsyncComponentSearchInput)
          api={
            Client {
              "_chain": [Function],
              "_wrapRequest": [Function],
              "bulkUpdate": [Function],
              "handleRequestError": [Function],
              "hasProjectBeenRenamed": [Function],
            }
          }
          className="search"
          onError={[Function]}
          onSuccess={[Function]}
          placeholder="Search DIFs"
          updateRoute={true}
          url="/projects/org/project/"
        />
      </Styled(div)>
    </PanelHeader>
    <PanelBody
      direction="column"
      disablePadding={true}
      flex={false}
    >
      <EmptyStateWarning
        small={false}
      >
        <p>
          There are no debug symbols for this project.
        </p>
      </EmptyStateWarning>
    </PanelBody>
  </Panel>
  <Styled(Pagination)
    onCursor={[Function]}
  />
</Fragment>
`;
